# LANTr

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  LANTr.cabal  MODULE.bazel  README.md  WORKSPACE.bazel  run_tests.sh
bazel/: build_settings.bzl  extensions.bzl  repositories.bzl
bazel/external_builds/: BUILD.llvm-project  BUILD.plog  BUILD.rapidcheck  BUILD.tree-sitter  BUILD.tree-sitter-json  BUILD.tree-sitter-wgsl
src/: BUILD.bazel
src/api/: BUILD.bazel  lantr-inl.hpp  lantr.hpp  lantr_unittest.cpp  rule.hpp
src/base/: BUILD.bazel  antlr4_tree_concepts.hpp  concepts.hpp  n_ary_tree.hpp  n_ary_tree_unittest.cpp  test_utility.cpp  test_utility.hpp  tree_concepts.hpp  tree_layer.hpp  tree_unittest.cpp  types.hpp  utility.hpp
src/base/utilities/: assert.hpp  bottom.cpp  bottom.hpp
src/parser/: BUILD.bazel  parser.cpp  parser.hpp  parser_info.hpp  parser_unittest.cpp
src/parser/ast/: BUILD.bazel  abst_parsetree.cpp  abst_parsetree.hpp  abst_parsetree_unittest.cpp  antlr_parsetree.cpp  antlr_parsetree.hpp  antlr_parsetree_unittest.cpp  parser_tree.hpp  parsetree-inl.hpp  parsetree.hpp  parsetree_unittest.cpp  tree_layer.hpp
src/parser/ast/pattern_matching/: matchable.hpp  pattern_matching.hpp  pattern_matching_unittest.cpp
src/parser/languages/: BUILD.bazel  language_definitions.hpp  language_impl.cpp  language_impl.hpp  language_impl_unittest.cpp
src/parser/languages/InternalLang/: README.md
src/parser/languages/InternalLang/Arith/: Arith.g4  ArithBaseListener.cpp  ArithBaseListener.h  ArithBaseVisitor.cpp  ArithBaseVisitor.h  ArithLexer.cpp  ArithLexer.h  ArithListener.cpp  ArithListener.h  ArithParser.cpp  ArithParser.h  ArithVisitor.cpp  ArithVisitor.h  BUILD.bazel
src/parser/languages/javascript/: BUILD.bazel  JavaScriptLexer.cpp  JavaScriptLexer.g4  JavaScriptLexer.h  JavaScriptParser.cpp  JavaScriptParser.g4  JavaScriptParser.h  JavaScriptParserBaseListener.cpp  JavaScriptParserBaseListener.h  JavaScriptParserBaseVisitor.cpp  JavaScriptParserBaseVisitor.h  JavaScriptParserListener.cpp  JavaScriptParserListener.h  JavaScriptParserVisitor.cpp  JavaScriptParserVisitor.h
src/parser/languages/typescript/: BUILD.bazel
src/parser/third_parser/typescript/: BUILD.bazel
src/transformer/: BUILD.bazel  rule.hpp  strategy.hpp  strategy_unittest.cpp
