###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "lantr",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")
bazel_dep(name = "rules_foreign_cc", version = "0.10.1")
bazel_dep(name = "bazel_skylib", version = "1.5.0")
bazel_dep(name = "platforms", version = "0.0.8")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

# External repositories

# Antlr4
antlr4_dep = use_extension("@lantr//:bazel/extensions.bzl", "antlr4_dep")
use_repo(antlr4_dep, "antlr4_runtime")

# Rapidcheck
rapidcheck_dep = use_extension("@lantr//:bazel/extensions.bzl", "rapidcheck_dep")
use_repo(rapidcheck_dep, "rapidcheck")

# Plog
plog_dep = use_extension("@lantr//:bazel/extensions.bzl", "plog_dep")
use_repo(plog_dep, "plog")

# TreeSitter
tree_sitter_dep = use_extension("@lantr//:bazel/extensions.bzl", "treesitter_dep")
use_repo(tree_sitter_dep, "tree_sitter")

# Oilpan
oilpan_dep = use_extension("@lantr//:bazel/extensions.bzl", "oilpan_dep")
use_repo(oilpan_dep, "oilpan")

# Argparse
argparse_dep = use_extension("@lantr//:bazel/extensions.bzl", "argparse_dep")
use_repo(argparse_dep, "argparse")
