filegroup(
    name = "utilities",
    srcs = ["utilities/assert.hpp",
            "utilities/bottom.hpp"],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "types",
    srcs = ["types.hpp",
            "n_ary_tree.hpp"],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "base_unittest",
    srcs = [":types",
            ":utilities",
            ":n_ary_tree_unittest.cpp"],
    deps = ["@antlr4_runtime//:antlr4_runtime",
            "@com_google_googletest//:gtest_main",
            "@rapidcheck//:rapidcheck",
            ]
)

cc_library(
    name = "base",
    hdrs = [":types",
            ":utilities"],
    include_prefix = "base",
    visibility = ["//visibility:public"]
)
