filegroup(
    name = "utilities",
    srcs = ["utilities/assert.hpp",
            "utilities/bottom.hpp",
            "utilities/bottom.cpp",
            "utility.hpp",
            "test_utility.hpp",
            "test_utility.cpp"],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "types",
    srcs = ["types.hpp",
            "n_ary_tree.hpp",
            "tree_layer.hpp",
            "tree_concepts.hpp"],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "base_unittest",
    srcs = [":types",
            ":utilities",
            ":tree_unittest.cpp",],
    deps = ["@antlr4_runtime//:antlr4_runtime",
            "@com_google_googletest//:gtest_main",
            "@rapidcheck//:rapidcheck",
            ]
)

cc_library(
    name = "base",
    srcs = [":utilities"],
    hdrs = [":types",
            ":utilities"],
    include_prefix = "base",
    visibility = ["//visibility:public"]
)
