filegroup(
    name = "utilities",
    srcs = ["utilities/assert.hpp",
            "utilities/bottom.hpp",
            "utilities/bottom.cpp",
            "utility.hpp",
            "test_utility.hpp",
            "test_utility.cpp"],
)

filegroup(
    name = "test_utilities",
    srcs = ["test_utility.hpp",
            "test_utility.cpp"]
)

filegroup(
    name = "types",
    srcs = ["types.hpp",
            "n_ary_tree.hpp",
            "tree_layer.hpp"],
)

filegroup(
    name = "concepts",
    srcs = ["tree_concepts.hpp",
            "antlr4_tree_concepts.hpp",
            "concepts.hpp"]
)

cc_test(
    name = "base_unittest",
    srcs = [":types",
            ":utilities",
            ":tree_unittest.cpp",
            ":concepts"],
    deps = ["@antlr4_runtime//:antlr4_runtime",
            "@com_google_googletest//:gtest_main",
            "@rapidcheck//:rapidcheck",
            ]
)

cc_library(
    name = "base",
    srcs = [":utilities"],
    hdrs = [":types",
            ":utilities",
            ":test_utilities",
            ":concepts"],
    include_prefix = "base",
    # Required by :test_utilities
    deps = ["@com_google_googletest//:gtest_main",
            "@rapidcheck//:rapidcheck"],
    visibility = ["//visibility:public"]
)
