cc_library(
    name = "parser",
    srcs = ["parser.hpp",
            "//src/parser/ast:ast",
            "//src/parser/languages:languages_srcs",
            ],
    hdrs = ["parser.hpp",
            "//src/parser/ast:ast_hdrs",
            "//src/parser/languages/typescript:typescript_hdrs",
            "//src/parser/languages/javascript:javascript_hdrs",
            ],
    visibility = ["//visibility:public"],
    deps = ["@antlr4_runtime//:antlr4_runtime",
            "//src/base:base"]
)
