filegroup(
    name = "transformer-srcs",
    srcs = ["rule.hpp",
            "strategy.hpp",
            "engine.hpp"],
)

filegroup(
    name = "transformer-hdrs",
    srcs = ["rule.hpp",
            "strategy.hpp",
            "engine.hpp"],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "transformer_unittest",
    srcs = [":transformer-srcs",
            "strategy_unittest.cpp"],
    deps = [
        "@com_google_googletest//:gtest_main",
        "@rapidcheck//:rapidcheck",
        "//src/base:base",
        "//src/parser:parser",
    ]
)
