filegroup(
    name = "ast_hdrs",
    srcs = ["antlr_parsetree.hpp"],
    visibility = ["//visibility:public"],
)
filegroup(
    name = "ast",
    srcs = [":ast_hdrs",
            "antlr_parsetree.cpp",
            "pattern_matching/matchable.hpp",
            ],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "ast_unittest",
    srcs = [":ast",
            "antlr_parsetree_unittest.cpp",
            "//src/parser/languages:languages_srcs",
            ],
    deps = ["@antlr4_runtime//:antlr4_runtime",
            "@com_google_googletest//:gtest_main",
            "@rapidcheck//:rapidcheck",
            "//src/base:base",
            ]
)
