filegroup(
    name = "ast_hdrs",
    srcs = ["abst_parsetree.hpp"],
    visibility = ["//visibility:public"],
)
filegroup(
    name = "ast",
    srcs = [":ast_hdrs",
            "abst_parsetree.cpp",
            "pattern_matching/matchable.hpp",
            "pattern_matching/pattern_matching.hpp",
            ],
    visibility = ["//visibility:public"]
)

cc_test(
    name = "ast_unittest",
    srcs = [":ast",
            "abst_parsetree_unittest.cpp",
            "pattern_matching/pattern_matching_unittest.cpp",
            "//src/parser/languages:languages_srcs",
            ],
    deps = ["@antlr4_runtime//:antlr4_runtime",
            "@com_google_googletest//:gtest_main",
            "@rapidcheck//:rapidcheck",
            "//src/base:base",
            ]
)
