filegroup(
    name = "languages_srcs",
    srcs = ["language.hpp",
            "language_definitions.hpp",
            "language_impl.hpp",
            "language_impl.cpp",
            "//src/parser/languages/javascript:javascript_parser",
            "//src/parser/languages/typescript:typescript_parser",
            "//src/parser/languages/InternalLang/Arith:arith"],
    visibility = ["//visibility:public"]
)

filegroup(
    name = "languages_hdrs",
    srcs = ["language.hpp",
            "language_definitions.hpp",
            "//src/parser/languages/javascript:javascript_hdrs",
            "//src/parser/languages/typescript:typescript_hdrs",
            "//src/parser/languages/InternalLang/Arith:arith_hdrs"],
    visibility = ["//visibility:public"]
)



cc_test(
    name = "languages_unittest",
    srcs = [":languages_srcs",
            "language_impl_unittest.cpp"],
    deps = [
         "@com_google_googletest//:gtest_main",
         "@rapidcheck//:rapidcheck",
         "//src/base:base",
         "@antlr4_runtime//:antlr4_runtime"
         ]
)
